--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -1,186 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Cinque Terre</title>
-        <!-- META DESCRIPTION -->
-        <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+<head>
+    <meta charset="UTF-8">
+    <title>Cinque Terre</title>
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
 
-        <!-- META KEYWORDS -->
-        <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
 
-        <!-- FOR RESPONSIVE DESIGN -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- ADOBE FONTS -->
-        <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
-        <!-- MAIN CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-    </head>
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
 
-    <body>
-        <header>
-            <div class="site-logo">
-                <a href="index.html">
-                    <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
-                </a>
-                <h1 class="hide-visually">angelica palilio</h1>
+<body>
+    <header>
+        <div class="site-logo">
+            <a href="index.html">
+                <img src="img/svg/logo-emblem.svg" alt="Angelica Portfolio Logo" width="300" height="60">
+            </a>
+            <h1 class="hide-visually">angelica palilio</h1>
+        </div>
+
+        <nav class="site-nav">
+            <ul>
+
+                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+
+            </ul>
+        </nav>
+    </header>
+
+
+    <main>
+        <section class="project-hero">
+            <div class="hero-image-wrapper">
+                <img src="img/png/cinque-terre-bg-wide.png" alt="placeholder" width="1920" height="1080" />
+            </div>
+        </section>
+
+        <div class="container wide">
+            <div class="row intro">
+                <div class="one-fourth">
+                    <ul class="project-meta-list">
+                        <li><strong class="caps">Client:</strong> Student Project</li>
+                        <li><strong class="caps">Project Type:</strong> Tourism Logo</li>
+                        <li><strong class="caps">Software:</strong> Adobe Illustrator</li>
+                    </ul>
+                </div>
+
+                <div class="three-fourths">
+                    <div class="container-content">
+                        <h3>Cinque Terre</h3>
+                        <!-- <h5><em>A Destination Emblem</em></h5> -->
+
+
+                        <p>To capture the essence of Cinque Terre, I began by researching its history, culture, and art to inspire my sketches. After gathering a substantial amount of information, I moved to my sketchpad and developed several initial ideas. Through my research, I discovered that anchovies are a staple ingredient in many dishes from Cinque Terre, often referred to as the <em>"bread of the sea"</em> due to their abundance and importance in the local cuisine. </p>
+
+                        <p>In my research, I also discovered that Cinque Terre is made up of five villages— Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore. Each village has its own unique charm, traditions, and strong connection to the sea, which plays a central role in the region&apos;s culture and daily life. This is why I chose to incorporate five fish into my logo design to symbolically represent the five villages and highlight the importance of the sea to the identity and livelihood of Cinque Terre.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </section>
+
+
+
+
+        <section>
+            <div class="project-grid">
+                <div class="project-card">
+                    <img src="img/gif/cinque-terre-logo-wide.gif" alt="Project 1" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
             </div>
 
-            <nav class="site-nav">
-                <ul>
+            <div class="project-grid">
+                <div class="project-card">
+                    <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+            </div>
 
-                    <li><a href="index.html#projects">Projects</a></li>
+            <div class="project-grid two-column">
+                <div class="project-card">
+                    <img src="img/webp/mug.webp" alt="Project 2" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="img/webp/sign-cq.webp" alt="Project 3" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section>
+            <div class="container wide">
+                <div class="view-other-projects">
+
+                    <ul class="_line hover-effect">
+                        <li class="prev"><a href="araw.html">Previous Project</a></li>
+                        <li><a href="index.html#project">View All Projects</a></li>
+                        <li class="next"><a href="boozi.html">Next Project</a></li>
+                    </ul>
+
+                    <!-- <a href="cinqueterre.html">Previous</a>
+                    <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
+                    <a href="charlesandrayeames.html">Next</a> -->
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+    <footer class="site-footer fixed-footer">
+
+        <div class="eyebrow"> <strong>angelica palilio</strong></div>
+
+        <div class="row">
+            <div class="one-third column">
+                <div class="work">
+                    <div>
+
+                        <ul class="footer-worknav">
+                            <li><a href="araw.html">Araw</a></li>
+                            <li><a href="cinqueterre.html">Cinque Terre</a></li>
+                            <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
+                            <li><a href="#">The Resting Mug</a></li>
+                            <li><a href="#">Krishna Cow Sanctuary</a></li>
+                            <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="one-third column">
+                <ul class="footer-pagenav">
+
+                    <li><a href="index.html">Home</a></li>
+
                     <li><a href="about.html">About</a></li>
 
                 </ul>
-            </nav>
-        </header>
 
-
-        <main>
-            <section class="project-hero">
-                <div class="hero-image-wrapper">
-                    <img src="img/png/cinque-terre-bg-wide.png" alt="placeholder" width="1920" height="1080" />
-                </div>
-            </section>
-
-            <div class="container wide">
-                <div class="row intro">
-                    <div class="one-fourth">
-                        <ul class="project-meta-list">
-                            <li><strong class="caps">Client:</strong> Student Project</li>
-                            <li><strong class="caps">Project Type:</strong> Tourism Logo</li>
-                            <li><strong class="caps">Software:</strong> Adobe Illustrator</li>
-                        </ul>
-                    </div>
-
-                    <div class="three-fourths">
-                        <div class="container-content">
-                            <h3>Cinque Terre</h3>
-                            <!-- <h5><em>A Destination Emblem</em></h5> -->
-
-
-                            <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre&apos;s charm.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
+            <div class="one-third column">
+                <ul class="footer-socialnav">
 
-            </section>
+                    <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
 
+                    <li><a href="mailto:#">Email</a></li>
 
+                </ul>
 
-
-            <section>
-                <div class="project-grid">
-                    <div class="project-card">
-                        <img src="img/gif/cinque-terre-logo-wide.gif" alt="Project 1" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-grid">
-                    <div class="project-card">
-                        <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-grid two-column">
-                    <div class="project-card">
-                        <img src="img/webp/mug.webp" alt="Project 2" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="img/webp/sign-cq.webp" alt="Project 3" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-
-                </div>
-            </section>
-            <section>
-                <div class="container">
-                    <div class="view-other-projects">
-
-                        <ul class="_line hover-effect">
-                            <li><a href="araw.html">Previous</a></li>
-                            <li><a href="index.html#project">View all Projects</a></li>
-                            <li><a href="boozi.html">Next</a></li>
-                        </ul>
-
-                        <!-- <a href="cinqueterre.html">Previous</a>
-            <a class="icon-hover" href="cinqueterre.html">View all Projects</a>
-            <a href="charlesandrayeames.html">Next</a> -->
-                    </div>
-                </div>
-            </section>
-        </main>
-
-
-        <footer class="site-footer fixed-footer">
-
-            <div class="eyebrow"> <strong>angelica palilio</strong></div>
-
-            <div class="row">
-                <div class="one-third column">
-                    <div class="work">
-                        <div>
-
-                            <ul class="footer-worknav">
-                                <li><a href="araw.html">Araw</a></li>
-                                <li><a href="#">The Resting Mug</a></li>
-                                <li><a href="cinqueterre.html">Cinque Terre</a></li>
-                                <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
-                                <li><a href="#">Krishna Cow Sanctuary</a></li>
-                                <li><a href="#">Boozi Hard Seltzer</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-pagenav">
-
-                        <li><a href="index.html">Home</a></li>
-
-                        <li><a href="about.html">About</a></li>
-
-                    </ul>
-
-                </div>
-                <div class="one-third column">
-                    <ul class="footer-socialnav">
-
-                        <li><a href="https://www.linkedin.com/in/angelicapalilio/" target="_blank">Linkedin</a></li>
-
-                        <li><a href="mailto:#">Email</a></li>
-
-                    </ul>
-
-                </div>
-                <div class="footer-logo-img">
-                    <img src="img/png/flower-business.png" alt="" width="100" height="100">
-                </div>
             </div>
-            <div class="legal">
+            <div class="footer-logo-img">
+                <img src="img/png/flower-business.png" alt="" width="100" height="100">
+            </div>
+        </div>
+        <div class="legal">
 
-                <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
+            <p>&copy; 2025 Angelica Palilio. All Rights Reserved </p>
 
-                <div class="legal-links">
-
-                </div>
+            <div class="legal-links">
 
             </div>
 
-        </footer>
+        </div>
 
-    </body>
+    </footer>
+
+</body>
 
 </html>
